2.8: particle clump curve checkbox crashes blender #58032

Closed
opened 2018-11-24 09:18:50 +01:00 by user1 · 8 comments

Starenwolke.blend

system-info.txt

Select Mball.007, then under particle settings/Clumping, tick "Use Clump Curve" → results in crash.

[Starenwolke.blend](https://archive.blender.org/developer/F5701536/Starenwolke.blend) [system-info.txt](https://archive.blender.org/developer/F5701553/system-info.txt) Select Mball.007, then under particle settings/Clumping, tick "Use Clump Curve" → results in crash.
Author

Added subscriber: @user1

Added subscriber: @user1
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed,

when opening the file we already assert here:

BLI_assert(rng_skip_tot > 0) where rng_skip_tot is 0

1   raise						0x7ffff619853f 
2   abort						0x7ffff6182895 
3   distribute_from_volume_exec				particle_distribute.c 631  0x28cb9b4      
4   exec_distribute_parent				particle_distribute.c 733  0x28cbfca      
5   BLI_task_pool_work_and_wait				task.c                893  0x2ba7d5a      
6   distribute_particles_on_dm				particle_distribute.c 1244 0x28cddec      
7   distribute_particles				particle_distribute.c 1273 0x28cdf2c      
8   system_step						particle_system.c     3979 0x2819bbe      
9   particle_system_update				particle_system.c     4363 0x281b386      
10  deformVerts						MOD_particlesystem.c  205  0x21efbde      
11  modwrap_deformVerts					modifier.c            852  0x27b4e50      
12  mesh_calc_modifiers					DerivedMesh.c         1378 0x2658400      
13  mesh_build_data					DerivedMesh.c         1992 0x265a8eb      
14  makeDerivedMesh					DerivedMesh.c         2097 0x265ad27      
15  BKE_object_handle_data_update			object_update.c       214  0x27ef9c6      
16  BKE_object_eval_uber_data 				object_update.c       350  0x27effde      

checking why we even get to this point now...

Confirmed, when opening the file we already assert here: `BLI_assert(rng_skip_tot > 0)` where `rng_skip_tot` is 0 ``` 1 raise 0x7ffff619853f 2 abort 0x7ffff6182895 3 distribute_from_volume_exec particle_distribute.c 631 0x28cb9b4 4 exec_distribute_parent particle_distribute.c 733 0x28cbfca 5 BLI_task_pool_work_and_wait task.c 893 0x2ba7d5a 6 distribute_particles_on_dm particle_distribute.c 1244 0x28cddec 7 distribute_particles particle_distribute.c 1273 0x28cdf2c 8 system_step particle_system.c 3979 0x2819bbe 9 particle_system_update particle_system.c 4363 0x281b386 10 deformVerts MOD_particlesystem.c 205 0x21efbde 11 modwrap_deformVerts modifier.c 852 0x27b4e50 12 mesh_calc_modifiers DerivedMesh.c 1378 0x2658400 13 mesh_build_data DerivedMesh.c 1992 0x265a8eb 14 makeDerivedMesh DerivedMesh.c 2097 0x265ad27 15 BKE_object_handle_data_update object_update.c 214 0x27ef9c6 16 BKE_object_eval_uber_data object_update.c 350 0x27effde ``` checking why we even get to this point now...
Member

rng_skip_tot = 0 should be fine, I guess. (see P833)

real crash is here (where CurveMap->table is NULL)

1   curvemap_evaluateF                               colortools.c            904  0x29ceabf 
2   curvemapping_evaluateF                           colortools.c            912  0x29ceb4d 
3   do_clump_level                                   particle_child.c        548  0x2b2a090 
4   do_clump                                         particle_child.c        585  0x2b2a302 
5   do_child_modifiers                               particle_child.c        788  0x2b2aebc 
6   psys_get_particle_state                          particle.c              3998 0x2b266e6 
7   make_duplis_particle_system                      object_dupli.c          1013 0x2b0de98 
8   make_duplis_particles                            object_dupli.c          1137 0x2b0e606 
9   object_duplilist                                 object_dupli.c          1197 0x2b0e7e5 
10  (anonymous namespace)::deg_iterator_objects_step depsgraph_query_iter.cc 208  0x2ef2a4f 
11  DEG_iterator_objects_next                        depsgraph_query_iter.cc 284  0x2ef2d14 
12  DEG_iterator_objects_begin                       depsgraph_query_iter.cc 251  0x2ef2bef 
13  DRW_draw_render_loop_ex                          draw_manager.c          1427 0x27daedb 
14  DRW_draw_view                                    draw_manager.c          1367 0x27dabe1 
rng_skip_tot = 0 should be fine, I guess. (see [P833](https://archive.blender.org/developer/P833.txt)) real crash is here (where CurveMap->table is NULL) ``` 1 curvemap_evaluateF colortools.c 904 0x29ceabf 2 curvemapping_evaluateF colortools.c 912 0x29ceb4d 3 do_clump_level particle_child.c 548 0x2b2a090 4 do_clump particle_child.c 585 0x2b2a302 5 do_child_modifiers particle_child.c 788 0x2b2aebc 6 psys_get_particle_state particle.c 3998 0x2b266e6 7 make_duplis_particle_system object_dupli.c 1013 0x2b0de98 8 make_duplis_particles object_dupli.c 1137 0x2b0e606 9 object_duplilist object_dupli.c 1197 0x2b0e7e5 10 (anonymous namespace)::deg_iterator_objects_step depsgraph_query_iter.cc 208 0x2ef2a4f 11 DEG_iterator_objects_next depsgraph_query_iter.cc 284 0x2ef2d14 12 DEG_iterator_objects_begin depsgraph_query_iter.cc 251 0x2ef2bef 13 DRW_draw_render_loop_ex draw_manager.c 1427 0x27daedb 14 DRW_draw_view draw_manager.c 1367 0x27dabe1 ```

This issue was referenced by 3919f99354

This issue was referenced by 3919f99354376504408cfb4bbd4e71d71ffdadbe
Sergey Sharybin was assigned by Philipp Oeser 2018-11-25 14:26:29 +01:00
Member

Added subscribers: @Sergey, @brecht

Added subscribers: @Sergey, @brecht
Member

Further findings:

  • BKE_particlesettings_clump_curve_init / curvemapping_add / curvemapping_set_defaults are indeed called
  • BUT: I dont see them being initialized by curvemapping_initialize() -- so curvemap_make_table() isnt called either...

D3988 seems to fix this, but I would kindly ask @Sergey or @brecht to check

Further findings: - `BKE_particlesettings_clump_curve_init` / `curvemapping_add` / `curvemapping_set_defaults` are indeed called - BUT: I dont see them being initialized by `curvemapping_initialize()` -- so `curvemap_make_table()` isnt called either... [D3988](https://archive.blender.org/developer/D3988) seems to fix this, but I would kindly ask @Sergey or @brecht to check
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58032
No description provided.