Fix T58032: particle children 'Use Clump Curve' crash

Maniphest Tasks: T58032

Differential Revision: https://developer.blender.org/D3988